--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@ footer { text-align: center; margin-top: 1.5rem; }
 
 /* Markdown */
 
-/* fix auto scroll position */
+/* Fix auto scroll position */
 .markdown h3[id]::before, .markdown h4[id]::before, .markdown h5[id]::before, .markdown h6[id]::before {
   content:"";
   display:block;
