--- a/assets/style.css
+++ b/assets/style.css
@@ -48,13 +48,7 @@ footer { text-align: center; margin-top: 1.5rem; }
 /* Markdown */
 
 /* Fix auto scroll position */
-.markdown h2[id]::before {
-  content:"";
-  display:block;
-  height:4.5rem; /* fixed header height*/
-  margin:-4.5rem 0 0; /* negative fixed header height */
-}
-.markdown h4[id]::before, .markdown h5[id]::before, .markdown h6[id]::before {
+.markdown h3[id]::before, .markdown h4[id]::before, .markdown h5[id]::before, .markdown h6[id]::before {
   content:"";
   display:block;
   height:3rem; /* fixed header height*/
