--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,12 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 ul, ol { list-style: none; }
+a { text-decoration: none; }
 
 body {
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
 	line-height: 1.5rem;
 	background: white;
-	color: #333;
+	color: #444;
 }
 .content { padding: 0 20px; min-width: 800px; max-width: 1200px; 	margin: 0 auto; }
 h1 a { color: inherit; text-decoration: none; }
@@ -36,17 +37,22 @@ header h1 { font-size: 2rem; line-height: 3rem; }
 .header-repo-link img { height: 25px; opacity: 0.8; vertical-align: -3px; }
 
 main { display: flex; align-items: stretch; }
-main > * { padding: 1.5rem 10px; }
-main > aside { width: 300px; flex-shrink: 0; background: #ddd; }
+
+main > aside { width: 300px; flex-shrink: 0; background: #f2f3e8; }
 
 .toc { position: sticky; top: 4.5rem; font-size:0.9rem; font-weight: bold; }
-.toc ul ul { padding-left: 20px; font-size: 0.9em; font-weight: normal; }
-.toc a { text-decoration: none; color: inherit;}
+.toc ul ul { font-size: 0.9em; font-weight: normal; }
+.toc a { padding: 0 16px; text-decoration: none; color: inherit; display: block; }
+.toc a:hover, .toc a:focus { background: hsla(0, 0%, 100%, 0.8); }
+.toc li li a { padding-left: 30px; font-weight: normal; } 
+.toc li li li a { padding-left: 50px; }
+.toc li li li li a { padding-left: 70px; }
+.toc li li li li li a { padding-left: 90px; } 
 
 footer { text-align: center; margin-top: 1.5rem; }
 
 /* Markdown */
-
+.markdown  { padding: 0 16px; }
 /* Fix auto scroll position */
 .markdown h3[id]::before, .markdown h4[id]::before, .markdown h5[id]::before, .markdown h6[id]::before {
   content:"";
@@ -54,3 +60,8 @@ footer { text-align: center; margin-top: 1.5rem; }
   height:3rem; /* fixed header height*/
   margin:-3rem 0 0; /* negative fixed header height */
 }
+
+.markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 { line-height: 3rem; }
+.markdown h2 { border-bottom: 1px solid #ddd; margin-bottom: -1px; }
+.markdown p, .markdown ul { padding: 0.75rem 0;}
+.markdown ul { list-style: outside disc; padding-left: 30px }
