feat: improve markdown styles

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,11 +57,13 @@ footer { text-align: center; margin-top: 1.5rem; }
 .markdown h3[id]::before, .markdown h4[id]::before, .markdown h5[id]::before, .markdown h6[id]::before {
   content:"";
   display:block;
-  height:3rem; /* fixed header height*/
-  margin:-3rem 0 0; /* negative fixed header height */
+  height:3.75rem; /* fixed header height*/
+  margin:-3.75rem 0 0; /* negative fixed header height */
 }
 
 .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 { line-height: 3rem; }
 .markdown h2 { border-bottom: 1px solid #ddd; margin-bottom: -1px; }
-.markdown p, .markdown ul { padding: 0.75rem 0;}
+.markdown h3, .markdown h4, .markdown h5, .markdown h6 { line-height:1.5rem; margin-top: 1.5rem; }
+.markdown h3 + h4, .markdown h4 + h5, .markdown h5 + h6 { margin-top: 0.75rem; }
+.markdown p, .markdown ul, .markdown pre code { margin: 0.75rem 0;}
 .markdown ul { list-style: outside disc; padding-left: 30px }
