--- a/assets/atom-one-light.css
+++ b/assets/atom-one-light.css
@@ -18,18 +18,21 @@ hue-6-2: #c18401
 
 */
 
-.hljs {
+.markdown pre code {
   display: block;
   overflow-x: auto;
-  padding: 0.5em;
+  padding: 0.75em 15px;
   color: #383a42;
   background: #fafafa;
+  border-radius: 5px;
+  font: 13px "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  line-height: 1.5rem;
+  tab-size: 4;
 }
 
 .hljs-comment,
 .hljs-quote {
   color: #a0a1a7;
-  font-style: italic;
 }
 
 .hljs-doctag,
