--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 ul, ol { list-style: none; }
 a { text-decoration: none; }
+strong { font-weight: 600; }
 
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
@@ -60,7 +61,7 @@ footer { text-align: center; margin-top: 1.5rem; }
   height:3.75rem; /* fixed header height*/
   margin:-3.75rem 0 0; /* negative fixed header height */
 }
-
+.markdown a { color: #b0753b; }
 .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 { line-height: 3rem; }
 .markdown h2 { border-bottom: 1px solid #ddd; margin-bottom: -1px; }
 .markdown h3, .markdown h4, .markdown h5, .markdown h6 { line-height:1.5rem; margin-top: 1.5rem; }
