--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ h1 a { color: inherit; text-decoration: none; }
 
 /* Cover page */
 .cover { padding-top: 10vh; text-align: center; display: block; }
-.cover h1 { font-size: 6rem; color: #666; }
+.cover h1 { font-size: 6rem; color: #666; line-height: 9rem; }
 .cover p { font-size: 1.5rem; line-height: 3rem; }
 
 /* Package page */
