feat: improve document scrollability

--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,7 @@ main > aside { width: 300px; flex-shrink: 0; background: #f2f3e8; }
 footer { text-align: center; margin-top: 1.5rem; }
 
 /* Markdown */
-.markdown  { padding: 0 16px; }
+.markdown  { padding: 0 16px calc(100vh - 12rem); }
 /* Fix auto scroll position */
 .markdown h3[id]::before, .markdown h4[id]::before, .markdown h5[id]::before, .markdown h6[id]::before {
   content:"";
